fix: Fixes assignee and inbox name spacing issues

--- a/app/javascript/dashboard/assets/scss/_rtl.scss
+++ b/app/javascript/dashboard/assets/scss/_rtl.scss
@@ -240,6 +240,11 @@
         }
       }
 
+      .assignee-label {
+        margin-left: 0;
+        margin-right: var(--space-one);
+      }
+
       .show-more--button {
         margin: unset;
         transform: rotate(180deg);
@@ -261,6 +266,11 @@
       .label {
         margin-left: var(--space-smaller);
         margin-right: 0;
+
+        .label-color-dot {
+          margin-left: var(--space-smaller);
+          margin-right: 0;
+        }
       }
     }
 
@@ -312,8 +322,16 @@
   }
 
   // Labels
-  .label {
-    direction: initial;
+  .label-wrap .label {
+    .label-color-dot {
+      margin-left: var(--space-smaller);
+      margin-right: 0;
+    }
+
+    .label-close--button {
+      margin-left: 0;
+      margin-right: var(--space-smaller);
+    }
   }
 
   // Notification panel
